# firefly-iii-mcp-server

./: .env.example  .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: configuration.md  index.md  installation.md  integrations.md  quickstart.md  setup.md
docs/api/: operations.md
docs/development/: mcp-inspector.md
src/firefly_mcp/: main.py
src/firefly_mcp/core/: accounts.py  bills.py  budgets.py  categories.py  piggy_banks.py  rule_groups.py  rules.py  tags.py  transactions.py
src/firefly_mcp/lib/: exceptions.py  http_client.py
src/firefly_mcp/models/: app.py  model.py  requests.py  schemas.py
src/firefly_mcp/tools/: accounts.py  bills.py  budgets.py  categories.py  main.py  piggy_banks.py  registry.py  rule_groups.py  rules.py  tags.py  transactions.py  utils.py
tests/: conftest.py
tests/e2e/: test_accounts.py
